enabling query params